# Memorose

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-zh.md  README.md  TODO.md  TODO_Multimodal.md  TODO_Raft_P5.md  config.example.toml  config.toml.example  docker-compose.yml  reset_to_standalone.sh
.github/assets/: README.md
.github/workflows/: docker-publish.yml
crates/memorose-common/: Cargo.toml
crates/memorose-common/src/: config.rs  config_example.rs  lib.rs  sharding.rs  tokenizer.rs  video.rs
crates/memorose-core/: Cargo.toml
crates/memorose-core/examples/: basic_operations.rs  enhanced_community_detection.rs  entropy_filtering.rs  graph_analysis.rs  graph_query_performance.rs  graph_query_performance_v2.rs  inspect_state.rs  multi_frequency.rs  raft_cluster.rs  semantic_compression.rs  test_batch_embed.rs
crates/memorose-core/proto/: raft.proto
crates/memorose-core/src/: arbitrator.rs  engine.rs  fact_extraction.rs  fact_extraction_multilingual.json  lib.rs  reranker.rs  worker.rs
crates/memorose-core/src/community/: basic.rs  batch.rs  enhanced.rs  mod.rs
crates/memorose-core/src/engine/: community.rs  correction.rs  forgetting.rs  helpers.rs  ingest.rs  memory_crud.rs  mod.rs  organization.rs  query_cache.rs  reflection.rs  search.rs  snapshot.rs  task.rs  tests.rs  types.rs
crates/memorose-core/src/graph/: cache.rs  executor.rs  mod.rs  optimizer.rs  perf_test.rs  query_builder.rs
crates/memorose-core/src/ingest/: video.rs
crates/memorose-core/src/llm/: gemini.rs  gemini_tests.rs  mod.rs  openai.rs  openai_tests.rs
crates/memorose-core/src/raft/: mod.rs  network.rs  storage.rs  types.rs
crates/memorose-core/src/storage/: blob.rs  graph.rs  index.rs  kv.rs  mod.rs  repair.rs  system_kv.rs  vector.rs
crates/memorose-core/tests/: integration.rs
crates/memorose-gateway/: Cargo.toml
crates/memorose-gateway/src/: main.rs
crates/memorose-server/: Cargo.toml  build.rs
crates/memorose-server/src/: main.rs  repair_cli.rs  shard_manager.rs  types.rs
crates/memorose-server/src/dashboard/: auth.rs  handlers.rs  mod.rs  registry.rs
crates/memorose-server/src/dashboard/handlers/: agents.rs  auth.rs  chat.rs  config.rs  corrections.rs  forget.rs  graph.rs  memories.rs  mod.rs  organizations.rs  search.rs  stats.rs  types.rs
dashboard/: .gitignore  memorose-logo-preview.html  next.config.ts  package.json  pnpm-lock.yaml
dashboard/server/: standalone-server.js  static-assets.js  static-assets.test.js
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/(authenticated)/: layout.tsx
dashboard/src/app/(authenticated)/agents/: page.tsx
dashboard/src/app/(authenticated)/apps/: page.tsx
dashboard/src/app/(authenticated)/cluster/: page.tsx
dashboard/src/app/(authenticated)/memories/: page.tsx
dashboard/src/app/(authenticated)/metrics/: page.tsx
dashboard/src/app/(authenticated)/organizations/: page.tsx
dashboard/src/app/(authenticated)/playground/: page.tsx
dashboard/src/app/(authenticated)/settings/: page.tsx
dashboard/src/app/(authenticated)/tasks/: page.tsx
dashboard/src/app/[locale]/: globals.css  layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: ClientIntlProvider.tsx  CommandPalette.tsx  LocaleSwitcher.tsx  OrgSwitcher.tsx  RainbowWaterfall.tsx  TaskTreeViewer.tsx  dashboard-chrome.tsx  empty-state.tsx  haku-logo.tsx  login-form.tsx  memorose-logo.tsx  memory-assets.tsx  organization-knowledge-detail.tsx  runtime-mode-banner.tsx  stat-card.tsx  status-dot.tsx  task-workspace.tsx
dashboard/src/components/Graph/: NetworkGraph.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  skeleton.tsx  table.tsx  tabs.tsx  toggle.tsx
dashboard/src/i18n/: request.ts  routing.ts
dashboard/src/lib/: api.ts  auth.ts  hooks.ts  locale.ts  org-scope.tsx  types.ts  utils.ts
dashboard/src/messages/: en.json  zh.json
docs/: architecture.drawio  community-detection-enhanced.md  docs.json  index.mdx  lancedb-index-resilience-design.md  llm-first-rac-design.md  memory-domain-refactor-plan.md
docs/api/: cluster.md  events.md  graph.md  organization-knowledge.md  rest-api.md  retrieve.md  tasks.md
docs/architecture/: forgetting-strategies.md  memory-hierarchy.md  memory-scopes.md  overview.md  storage-engines.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: basic-operations.md  benchmarks.md  dashboard.md  distributed-deployment.md  hybrid-search.md  knowledge-graph.md  multimodal-ingest.md  organization-knowledge.md  tasks-and-goals.md
docs/sdks/: go.md  index.mdx  java.md  node.md  python.md
docs/superpowers/plans/: 2026-04-27-vector-index-degraded-startup.md
examples/: README.md
examples/integrations/langchain/: README.md  memorose_retriever.py
examples/python/: http_client.py  infinite_memory_agent.py  multimodal_test.py  stt_test.py
memorose-website/: pnpm-lock.yaml
memorose-website/content/docs/: api-reference.mdx  architecture.mdx  deployment.mdx  getting-started.mdx  python-sdk.mdx
memorose-website/src/app/: globals.css  layout.tsx  page.tsx
memorose-website/src/app/benchmarks/: page.tsx
memorose-website/src/app/blog/: page.tsx
memorose-website/src/app/pricing/: page.tsx
memorose-website/src/components/: Footer.tsx  Navbar.tsx
memorose-website/src/components/landing/: Architecture.tsx  Benchmarks.tsx  CodeExample.tsx  ComparisonTable.tsx  Deployment.tsx  FeatureGrid.tsx  GitHubStats.tsx  Hero.tsx  ProblemSolution.tsx  Screenshots.tsx
memorose-website/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
scripts/: build_dashboard.sh  delete_local_dynamodb_table.sh  reset_dev.sh  start_cluster.sh
(+8 files in other folders)
