[package]
name = "memorose-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
config = "0.14"
toml = "0.8"
sha2 = "0.10"
