[package]
name = "memorose-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Akashic Project Contributors"]
repository = "https://github.com/yourusername/akashic"
homepage = "https://github.com/yourusername/akashic"
description = "Stateless gateway with tenant sharding for Memorose"
keywords = ["ai", "memory", "database", "gateway", "proxy"]
categories = ["database", "web-programming::http-server"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"
sha2 = "0.10"
bytes = "1.11.1"
memorose-common = { path = "../memorose-common" }
